# aoc-bot

./: .gitignore  README.md  pyproject.toml
.cursor/: cli.json
.github/codex/prompts/: autonomous.md.template  solve-part1.md.template  solve-part2.md.template  solve.md.template
.github/workflows/: replay-year.yml  solve.yml  test-replay.yml
scripts/: aoc_tool.py  append_retry_prompt.py  final_check.py  git_push_solutions.sh  prepare_day.py  refresh_part2.py  render_prompt.py  replay_year.sh  run_cursor_agent.sh  solve_part.sh  submit_part.py  test_replay.sh  verify_solution.py
solutions/: _template.py
solutions/2015/19/: part1.py  part2.py
solutions/2018/17/: part1.py  part2.py
solutions/2018/18/: part1.py  part2.py
solutions/2018/19/: part1.py  part2.py
solutions/2018/20/: part1.py  part2.py
solutions/2018/21/: part1.py  part2.py
solutions/2018/22/: part1.py  part2.py
solutions/2018/23/: part1.py  part2.py
solutions/2018/24/: part1.py  part2.py
solutions/2018/25/: part1.py
solutions/2019/19/: part1.py  part2.py
solutions/2019/20/: part1.py  part2.py
solutions/2019/21/: part1.py  part2.py
solutions/2019/22/: part1.py  part2.py
solutions/2019/23/: part1.py  part2.py
solutions/2019/24/: part1.py  part2.py
solutions/2019/25/: part1.py  part2.py
solutions/2020/1/: part1.py  part2.py
solutions/2020/10/: part1.py  part2.py
solutions/_template/: part1.py  part2.py
src/aoc_bot/: __init__.py  agent.py  artifacts.py  cli.py  client.py  config.py  git_push.py  prompt.py  replay.py  runner.py  solution_paths.py  toolkit.py
(+185 files in other folders)
