[project]
name = "aoc-bot"
version = "0.1.0"
description = "Automated Advent of Code solver with GitHub Actions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
aoc = "aoc_bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aoc_bot"]
